security/kyverno/allow-only-harbor-registry.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: ensure-images-from-trusted-registry
  namespace: giropops
spec:
  validationFailureAction: Enforce
  rules:
  - name: trusted-registry
    match: 
      resources:
        kinds:
        - Pod
    exclude:
      resources:
        namespaces:
          - argocd
          - cluster-bootstrap
          - kube-system
          - kyverno
          - monitoring
          - ingress-nginx
    validate:
      message: "Utilize imagens do Registry Harbor!"
      pattern:
        spec:
          containers:
          - name: "*"
            image: "harbor.fabiobartoli.com.br/*"
